Address the PR comments
Signed-off-by: Rishabh Maurya <rishabhmaurya05@gmail.com>